deploy: e1ec450a774af5b6960b984f8d20107f72d553d4

--- a/CKKSScheme.html
+++ b/CKKSScheme.html
@@ -140,8 +140,8 @@ rings.
 <br />   <span class='subsubsectionToc'>D-3.9.1 <a href='HomomorphicRotationofInputVectorSlots1.html#example7'>Example</a></span>
 <br />   <span class='subsectionToc'>D-3.10 <a href='ContemplationonCKKSEncoding.html#contemplation-on-ckks-encoding'>Contemplation on CKKS Encoding</a></span>
 <br />   <span class='subsectionToc'>D-3.11 <a href='HomomorphicConjugation.html#homomorphic-conjugation'>Homomorphic Conjugation</a></span>
-<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext'>Sparsely Packing Ciphertext</a></span>
-<br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertext.html#forward-proof-decoding-of-sparsely-packed-ciphertext'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
+<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertexts.html#sparsely-packing-ciphertexts'>Sparsely Packing Ciphertexts</a></span>
+<br />   <span class='subsubsectionToc'>D-3.12.1 <a href='SparselyPackingCiphertexts.html#forward-proof-decoding-of-sparsely-packed-ciphertext'>Forward Proof: Decoding of Sparsely Packed Ciphertext</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.1 <a href='ModulusBootstrapping.html#highlevel-idea2'>High-level Idea</a></span>
 <br />   <span class='subsubsectionToc'>D-3.13.2 <a href='ModulusBootstrapping.html#mathematical-expansion-of-the-highlevel-idea'>Mathematical Expansion of the High-level Idea</a></span>
