--- a/FullyHomomorphicEncryptionSchemes.html
+++ b/FullyHomomorphicEncryptionSchemes.html
@@ -52,7 +52,7 @@ their RNS-variant versions.
 <br />   <span class='subsectionToc'>D-3.9 <a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1'>Homomorphic Rotation of Input Vector Slots</a></span>
 <br />   <span class='subsectionToc'>D-3.10 <a href='ContemplationonCKKSEncoding.html#contemplation-on-ckks-encoding'>Contemplation on CKKS Encoding</a></span>
 <br />   <span class='subsectionToc'>D-3.11 <a href='HomomorphicConjugation.html#homomorphic-conjugation'>Homomorphic Conjugation</a></span>
-<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext'>Sparsely Packing Ciphertext</a></span>
+<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertexts.html#sparsely-packing-ciphertexts'>Sparsely Packing Ciphertexts</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping'>Modulus Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme'>BGV Scheme</a></span>
 <br />   <span class='subsectionToc'>D-4.1 <a href='EncodingandDecoding1.html#encoding-and-decoding1'>Encoding and Decoding</a></span>
