--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Rings (<!--  l. 69  --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsectionToc'>D-3.9 <a href='HomomorphicRotationofInputVectorSlots1.html#homomorphic-rotation-of-input-vector-slots1' id='QQ2-132-211'>Homomorphic Rotation of Input Vector Slots</a></span>
 <br />   <span class='subsectionToc'>D-3.10 <a href='ContemplationonCKKSEncoding.html#contemplation-on-ckks-encoding' id='QQ2-133-213'>Contemplation on CKKS Encoding</a></span>
 <br />   <span class='subsectionToc'>D-3.11 <a href='HomomorphicConjugation.html#homomorphic-conjugation' id='QQ2-134-214'>Homomorphic Conjugation</a></span>
-<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertext.html#sparsely-packing-ciphertext' id='QQ2-135-215'>Sparsely Packing Ciphertext</a></span>
+<br />   <span class='subsectionToc'>D-3.12 <a href='SparselyPackingCiphertexts.html#sparsely-packing-ciphertexts' id='QQ2-135-215'>Sparsely Packing Ciphertexts</a></span>
 <br />   <span class='subsectionToc'>D-3.13 <a href='ModulusBootstrapping.html#modulus-bootstrapping' id='QQ2-136-217'>Modulus Bootstrapping</a></span>
 <br />   <span class='sectionToc'>D-4 <a href='BGVScheme.html#bgv-scheme' id='QQ2-137-229'>BGV Scheme</a></span>
 <br />   <span class='subsectionToc'>D-4.1 <a href='EncodingandDecoding1.html#encoding-and-decoding1' id='QQ2-138-230'>Encoding and Decoding</a></span>
