deploy: bc8ce7a7b6632033fd96fe2b735ead8ba1ee4150

--- a/Preface.html
+++ b/Preface.html
@@ -51,9 +51,9 @@ book comprises the following four parts:
    <li class='itemize'><a href='FullyHomomorphicEncryptionSchemes.html#fully-homomorphic-encryption-schemes'><span class='rm-lmbx-10x-x-109'>Part IV</span></a><span class='rm-lmbx-10x-x-109'>: </span><a href='FullyHomomorphicEncryptionSchemes.html#fully-homomorphic-encryption-schemes'><span class='rm-lmbx-10x-x-109'>Fully  Homomorphic  Encryption  Schemes</span><!--  tex4ht:ref: part:fhe-schemes   --></a>  explains  four  widely  used  FHE
    schemes: TFHE, BFV, CKKS, and BGV, as well as their RNS-variant versions.</li></ul>
 <!--  l. 292  --><p class='indent'>   <!--  l. 292  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
-</p><!--  l. 298  --><p class='indent'>   This book is available both as an  <a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10x-x-109'>arXiv PDF</span></a> and on an  <a href='https://fhetextbook.github.io'><span class='rm-lmbx-10x-x-109'>auto-generated website</span></a> (powered by
-<a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'>make4ht</a>). Please report any bugs or suggestions regarding the draft to the  <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>. As this book
-is an evolving open project, we welcome FHE experts to join us as collaborators and help expand the
+</p><!--  l. 298  --><p class='indent'>   This book is available both as an <a href='https://arxiv.org/abs/2503.05136'><span class='rm-lmbx-10x-x-109'>arXiv PDF</span></a> and on an <a href='https://fhetextbook.github.io'><span class='rm-lmbx-10x-x-109'>auto-generated website</span></a> (powered by
+<a href='https://www.kodymirus.cz/overleaf-html-sample/main.html'>make4ht</a>). Please report any bugs or suggestions regarding the draft to the <a href='https://github.com/fhetextbook/fhe-textbook/issues'><span class='rm-lmbx-10x-x-109'>Issues Board</span></a>. As this book is
+an evolving open project, we welcome FHE experts to join us as collaborators and help expand the
 draft.
    
 </p>
@@ -65,10 +65,10 @@ draft.
 <!--  l. 303  --><p class='indent'>   
 </p>
    <h5 class='likesubsubsectionHead' id='acknowledgments'><a id='x2-2000'></a>Acknowledgments</h5>
-<!--  l. 304  --><p class='noindent'>Special thanks go to the following researchers: Robin Geelen (KU Leuven,  <a href='mailto:robin.geelen@esat.kuleuven.be'>robin.geelen@esat.kuleuven.be</a>), for
-his thoughtful and dedicated feedback; Tianjian Yang (Peking University), for correcting numerous typos
-and other errors in the draft; and Yongwoo Lee (Inha University,  <a href='mailto:yongwoo@inha.ac.kr'>yongwoo@inha.ac.kr</a>), for his general
-advice.
+<!--  l. 304  --><p class='noindent'>Special thanks go to the following researchers: Robin Geelen (KU Leuven, <a href='mailto:robin.geelen@esat.kuleuven.be'>robin.geelen@esat.kuleuven.be</a>),
+for his thoughtful and dedicated feedback; Tianjian Yang (Peking University), for correcting numerous
+typos and other errors in the draft; and Yongwoo Lee (Inha University, <a href='mailto:yongwoo@inha.ac.kr'>yongwoo@inha.ac.kr</a>), for his
+general advice.
 </p><!--  l. 308  --><p class='indent'>
                                                                                          
                                                                                          
