--- a/RNSvariantFHESchemes.html
+++ b/RNSvariantFHESchemes.html
@@ -32,7 +32,7 @@ Thus, this section will focus on RNS-based operations for BFV, BGV, and CKKS.
 </p><!--  l. 5  --><p class='indent'>   Particularly in this section, we assume the modulo reduction
 <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mo class='MathClass-rel' stretchy='false'>|</mo><mi>a</mi><msub><mrow><mo class='MathClass-rel' stretchy='false'>|</mo></mrow><mrow><mi>q</mi></mrow></msub></mrow></math> implicitly
 uses a centered (i.e., signed) residue representation (<a href='ModuloArithmetic1.html#centered-residue-representation'><span class='ts1-lmr10-x-x-109'>§</span>A-1.2.3<!--  tex4ht:ref: subsubsec:bfv-bootstrapping-summary   --></a>) whose modulo overflow &amp; underflow boundaries
-are <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-bin' stretchy='false'>−</mo><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
+are <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></math> and
 <!--  l. 5  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow> <mo class='MathClass-bin' stretchy='false'>−</mo><mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mn>2</mn></mrow></mfrac></mstyle></mrow></math>,
