deploy: 5ad211d8a48409b2288c0e04ea9aaadcfe2ca445

--- a/TFHEonaDiscreteTorus.html
+++ b/TFHEonaDiscreteTorus.html
@@ -40,7 +40,7 @@ finite real number set: <!--  l. 1188  --><math display='inline' xmlns='http://w
 <mrow><mi>t</mi></mrow></mfrac> </mrow></msub> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>m</mi></mrow></math>,
 given <!--  l. 1216  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>e</mi> <mo class='MathClass-rel' stretchy='false'>&lt;</mo> <mstyle displaystyle='true'><mfrac><mrow> <mn>1</mn>
 </mrow><mrow><mn>2</mn><mi>t</mi></mrow></mfrac></mstyle></mrow></math>
-</p><!--  l. 1218  --><p class='indent'>   <span id='textcolor89'># where <!--  l. 1218  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>⌈</mo><mi>x</mi><msub><mrow><mo class='MathClass-close' stretchy='false'>⌋</mo></mrow><mrow><mfrac><mrow><mn>1</mn></mrow>
+</p><!--  l. 1218  --><p class='indent'>   <span style='color:#FF0000;'># where <!--  l. 1218  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>⌈</mo><mi>x</mi><msub><mrow><mo class='MathClass-close' stretchy='false'>⌋</mo></mrow><mrow><mfrac><mrow><mn>1</mn></mrow>
 <mrow><mi>t</mi></mrow></mfrac> </mrow></msub></mrow></math> means
 rounding <!--  l. 1218  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>x</mi></math> to the
 nearest multiple of <!--  l. 1218  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mn>1</mn>
