deploy: 4cfd6ea5d6075dba51e2b5532744199dad323f38

--- a/EncryptionandDecryption.html
+++ b/EncryptionandDecryption.html
@@ -22,7 +22,7 @@ cryptosystem (<a href='GLWECryptosystem.html#glwe-cryptosystem'><span class='ts1
 <div class='tcolorbox-content'><!--  l. 48  --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Initial Setup</span></span><span class='rm-lmbx-10x-x-109'>: </span><!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi mathvariant='normal'>Δ</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mstyle displaystyle='true'><mfrac><mrow><mi>q</mi>
 </mrow><mrow><mi>t</mi></mrow></mfrac></mstyle></mrow></math>,
 <!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi>s</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><mi>$</mi></mrow></munderover><msubsup><mrow><mi>ℤ</mi></mrow><mrow><mn>2</mn></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>
-<span style='color:#FF0000;'># where <!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
+<span id='textcolor54'># where <!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
 divides <!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>,
 and each element of <!--  l. 48  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>s</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 is a 0-degree polynomial</span>
@@ -30,7 +30,7 @@ is a 0-degree polynomial</span>
 </p><!--  l. 52  --><p class='noindent'></p><hr />
 <!--  l. 54  --><p class='noindent'><span class='underline'><span class='rm-lmbx-10x-x-109'>Encryption Input</span></span><span class='rm-lmbx-10x-x-109'>: </span><!--  l. 54  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>m</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>ℤ</mi></mrow><mrow><mi>t</mi></mrow></msub></mrow></math>,
 <!--  l. 54  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mover accent='true'><mrow><mi>a</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><mi>$</mi></mrow></munderover><msubsup><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow><mrow><mi>k</mi></mrow></msubsup></mrow></math>,
-<!--  l. 54  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>e</mi><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><msub><mrow><mi>χ</mi></mrow><mrow><mi>σ</mi></mrow></msub></mrow></munderover><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow></msub></mrow></math> <span style='color:#FF0000;'># each
+<!--  l. 54  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>e</mi><munderover> <mo class='MathClass-rel' stretchy='false'>←</mo><mrow></mrow><mrow><msub><mrow><mi>χ</mi></mrow><mrow><mi>σ</mi></mrow></msub></mrow></munderover><msub><mrow><mi>ℤ</mi></mrow><mrow><mi>q</mi></mrow></msub></mrow></math> <span id='textcolor55'># each
 element of <!--  l. 54  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mover accent='true'><mrow><mi>a</mi></mrow><mo accent='true' stretchy='false'>→</mo></mover></math>
 is a 0-degree polynomial</span>
     </p><dl class='enumerate-enumitem'><dt class='enumerate-enumitem'>
@@ -46,7 +46,7 @@ is a 0-degree polynomial</span>
     </dd><dt class='enumerate-enumitem'>
 2.  </dt><dd class='enumerate-enumitem'>Scale down <!--  l. 68  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mstyle mathsize='2.45em'><mrow><mo fence='true' form='prefix'>⌈</mo><mrow></mrow><mo fence='true' form='postfix'></mo></mrow></mstyle><mstyle displaystyle='true'><mfrac><mrow><mi mathvariant='normal'>Δ</mi><mi>m</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>e</mi>
    </mrow><mrow><mi mathvariant='normal'>Δ</mi>    </mrow></mfrac></mstyle><mstyle mathsize='2.45em'><mrow><mo fence='true' form='prefix'>⌋</mo><mrow></mrow><mo fence='true' form='postfix'></mo></mrow></mstyle> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>m</mi><mstyle class='text'><mtext> </mtext></mstyle> <mo class='MathClass-rel' stretchy='false'>∈</mo> <msub><mrow><mi>ℤ</mi></mrow><mrow><mi>t</mi></mrow></msub></mrow></math>
-    <span style='color:#FF0000;'> # i.e., modulus switch from <!--  l. 68  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>→</mo><mi>t</mi></mrow></math></span></dd></dl>
+    <span id='textcolor56'> # i.e., modulus switch from <!--  l. 68  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>q</mi> <mo class='MathClass-rel' stretchy='false'>→</mo><mi>t</mi></mrow></math></span></dd></dl>
 <!--  l. 71  --><p class='noindent'><!--  l. 71  --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
 </p><!--  l. 73  --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Condition for Correct Decryption:</span> </p>
    <ul class='itemize1'>
