deploy: 64406ecc81ee63079dea3c338e7521c4efe5e975

--- a/Definitions.html
+++ b/Definitions.html
@@ -34,7 +34,7 @@
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Identity (</span><!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mn>1</mn></mrow><mrow><mtext class='MathClass-open' stretchy='false'>(⋅)</mtext></mrow></msub></math><span class='rm-lmbx-10x-x-109'>):</span>
    An element <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>
-    is an additive identity if for all <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>,
+    is a multiplicative identity if for all <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>∈</mo> <mi>𝕊</mi></mrow></math>,
     <!-- l. 14 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>i</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mi>a</mi> <mo class='MathClass-rel' stretchy='false'>=</mo> <mi>a</mi></mrow></math>
    </li>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Additive Inverse (</span><!-- l. 15 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msup></math><span class='rm-lmbx-10x-x-109'>):</span>
