deploy: f07b0a413a001733c152e6e8a03b7c7009ff45eb

--- a/Overview1.html
+++ b/Overview1.html
@@ -33,7 +33,7 @@ where <!-- l. 17 --><math display='inline' xmlns='http://www.w3.org/1998/Math/Ma
     <li class='itemize'>
     <!-- l. 20 --><p class='noindent'><span class='rm-lmbx-10x-x-109'>Coefficient Ring: </span><!-- l. 20 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>f</mi></mrow><mrow><mi>i</mi></mrow></msub></math>’s
     each polynomial coefficient <!-- l. 20 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>c</mi></mrow><mrow><mi>j</mi></mrow></msub></math>
-    is in integer modulo <!-- l. 20 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>p</mi></math>.
+    is in integer modulo <!-- l. 20 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math>.
     </p><!-- l. 22 --><p class='noindent'>(i.e., <!-- l. 22 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msub><mrow><mi>c</mi></mrow><mrow><mi>i</mi></mrow></msub> <mo class='MathClass-bin' stretchy='false'>+</mo> <mi>q</mi> <mo class='MathClass-rel' stretchy='false'>≡</mo><msub><mrow><mi>c</mi></mrow><mrow><mi>i</mi></mrow></msub><mstyle class='text'><mtext> </mtext></mstyle><mstyle class='text'><mtext>mod</mtext></mstyle><mstyle class='text'><mtext> </mtext></mstyle><mi>q</mi></mrow></math>).
     </p><!-- l. 24 --><p class='noindent'><!-- l. 24 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'></math>
     </p></li>
