deploy: 715d31c5306554c8258cf9474be197ce6680c7f6

--- a/ModuloArithmetic1.html
+++ b/ModuloArithmetic1.html
@@ -75,7 +75,7 @@ the following is true:
    </dd></dl>
                                                                                         □
    </div>
-<!-- l. 102 --><p class='indent'>   Based on the modulo operations in TheoremA-1.2.1, we can also derive the following properties of
+<!-- l. 102 --><p class='indent'>   Based on the modulo operations in Theorem A-1.2.1, we can also derive the following properties of
 modulo arithmetic:
 </p>
    <div class='tcolorbox tcolorbox' id='tcolobox-3'>     
@@ -132,7 +132,7 @@ for each <!-- l. 136 --><math display='inline' xmlns='http://www.w3.org/1998/Mat
     </li>
     <li class='itemize'><span class='rm-lmbx-10x-x-109'>Multiplicative Inverse </span>of <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>a</mi></math>
    is denoted as <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msubsup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>∗</mo></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup></math>
-     <span style='color:#000000;'>which satisfies</span> <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>+</mo> <msubsup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>∗</mo></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>1</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi></mrow></math>.
+     <span style='color:#000000;'>which satisfies</span> <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mi>a</mi> <mo class='MathClass-bin' stretchy='false'>⋅</mo><msubsup><mrow><mi>a</mi></mrow><mrow><mo class='MathClass-bin' stretchy='false'>∗</mo></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>1</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mi>q</mi></mrow></math>.
     For example, in modulo 11, <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><msubsup><mrow><mn>3</mn></mrow><mrow><mo class='MathClass-bin' stretchy='false'>∗</mo></mrow><mrow><mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn></mrow></msubsup> <mo class='MathClass-rel' stretchy='false'>=</mo> <mn>4</mn></mrow></math>,
     because <!-- l. 142 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mn>3</mn> <mo class='MathClass-bin' stretchy='false'>⋅</mo><mn>4</mn> <mo class='MathClass-rel' stretchy='false'>≡</mo><mn>1</mn><mspace width='0.2em'></mspace><mo class='MathClass-bin' stretchy='false'> mod</mo><mspace width='0.2em'></mspace> <mn>11</mn></mrow></math>.
 </li></ul>
