--- a/NoiseBootstrapping.html
+++ b/NoiseBootstrapping.html
@@ -177,7 +177,7 @@ in a <span class='rm-lmri-10x-x-109'>proportionally </span>correct way. For this
 use the LWE modulus switching technique learned from <a href='LWEModulusSwitching.html#lwe-modulus-switching'><span class='ts1-lmr10-x-x-109'>§</span>C-4.1<!-- tex4ht:ref: subsec:coeff-rotation  --></a>.
    
 </p>
-   <h5 class='subsubsectionHead' id='modulus-switch-for-noise-boootstrapping'><span class='titlemark'>D-1.8.2   </span> <a id='x109-130000D-1.8.2'></a>Modulus Switch for Noise Boootstrapping</h5>
+   <h5 class='subsubsectionHead' id='modulus-switch-for-noise-bootstrapping'><span class='titlemark'>D-1.8.2   </span> <a id='x109-130000D-1.8.2'></a>Modulus Switch for Noise Bootstrapping</h5>
 <!-- l. 616 --><p class='noindent'>To avoid using the giant <!-- l. 616 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mrow><mo class='MathClass-open' stretchy='false'>(</mo><mi>q</mi> <mo class='MathClass-bin' stretchy='false'>−</mo><mn>1</mn><mo class='MathClass-close' stretchy='false'>)</mo></mrow></math>-degree
 polynomial <!-- l. 616 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><msub><mrow><mi>V</mi> </mrow><mrow><mi>q</mi></mrow></msub></math>, we will
 compress <!-- l. 616 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>q</mi></math> possible
