--- a/TFHEScheme.html
+++ b/TFHEScheme.html
@@ -84,7 +84,7 @@ multiplication, coefficient extraction, and noise bootstrapping.
 <br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction'>Coefficient Extraction</a></span>
 <br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.1 <a href='NoiseBootstrapping.html#overview3'>Overview</a></span>
-<br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-boootstrapping'>Modulus Switch for Noise Boootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-bootstrapping'>Modulus Switch for Noise Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.3 <a href='NoiseBootstrapping.html#halving-the-plaintext-space-to-be-used'>Halving the Plaintext Space To be Used</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.4 <a href='NoiseBootstrapping.html#blind-rotation'>Blind Rotation</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1'>Coefficient Extraction</a></span>
