--- a/contentsname.html
+++ b/contentsname.html
@@ -153,7 +153,7 @@ Dividing <!-- l. 95 --><math display='inline' xmlns='http://www.w3.org/1998/Math
 <br />   <span class='subsectionToc'>D-1.7 <a href='CoefficientExtraction.html#coefficient-extraction'>Coefficient Extraction</a></span>
 <br />   <span class='subsectionToc'>D-1.8 <a href='NoiseBootstrapping.html#noise-bootstrapping'>Noise Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.1 <a href='NoiseBootstrapping.html#overview3' id='QQ2-109-144'>Overview</a></span>
-<br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-boootstrapping' id='QQ2-109-145'>Modulus Switch for Noise Boootstrapping</a></span>
+<br />   <span class='subsubsectionToc'>D-1.8.2 <a href='NoiseBootstrapping.html#modulus-switch-for-noise-bootstrapping' id='QQ2-109-145'>Modulus Switch for Noise Bootstrapping</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.3 <a href='NoiseBootstrapping.html#halving-the-plaintext-space-to-be-used' id='QQ2-109-146'>Halving the Plaintext Space To be Used</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.4 <a href='NoiseBootstrapping.html#blind-rotation' id='QQ2-109-147'>Blind Rotation</a></span>
 <br />   <span class='subsubsectionToc'>D-1.8.5 <a href='NoiseBootstrapping.html#coefficient-extraction1' id='QQ2-109-149'>Coefficient Extraction</a></span>
