deploy: 9dc895691abdca659296a4f950c06afbaee8243c

--- a/EncodingandDecoding.html
+++ b/EncodingandDecoding.html
@@ -98,7 +98,7 @@ a rotation helper formula.
 </p>
    <ul class='itemize1'>
    <li class='itemize'><span class='rm-lmbx-10x-x-109'>Type of Input Slot Values: </span>BFV’s input slot values are <!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-dimensional
-   integer modulo <!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>,
+   integers modulo <!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>,
    which are encoded into <!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>n</mi></math>-dimensional
    polynomial coefficients (i.e., modulo-<!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mi>t</mi></math>
    integers). On the other hand, CKKS’s input slot values are <!-- l. 111 --><math display='inline' xmlns='http://www.w3.org/1998/Math/MathML'><mstyle displaystyle='true'><mfrac><mrow><mi>n</mi>
